--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   </head>
   <body>
     <header>
-      <a href="">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <p>info@devstudio.com</p>
-      <p>+11 (000) 111-11-11</p>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
@@ -24,30 +28,31 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Content</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -60,7 +65,7 @@
         <ul>
           <li>
             <img
-              src="/image/img.jpg"
+              src="image/img.jpg"
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
@@ -70,7 +75,7 @@
           </li>
           <li>
             <img
-              src="/image/img-2.jpg"
+              src="image/img-2.jpg"
               alt="Photo Tom Ford"
               width="264"
               height="260"
@@ -80,7 +85,7 @@
           </li>
           <li>
             <img
-              src="/image/img-3.jpg"
+              src="image/img-3.jpg"
               alt="Photo Camila Garcia"
               width="264"
               height="260"
@@ -90,7 +95,7 @@
           </li>
           <li>
             <img
-              src="/image/img-4.jpg"
+              src="image/img-4.jpg"
               alt="Photo Daniel Wilson"
               width="264"
               height="260"
@@ -102,7 +107,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
