--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
           <li>
             <img
-              src="image/img.jpg"
+              src="images/img.jpg"
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
@@ -75,7 +75,7 @@
           </li>
           <li>
             <img
-              src="image/img-2.jpg"
+              src="images/img-2.jpg"
               alt="Photo Tom Ford"
               width="264"
               height="260"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="image/img-3.jpg"
+              src="images/img-3.jpg"
               alt="Photo Camila Garcia"
               width="264"
               height="260"
@@ -95,7 +95,7 @@
           </li>
           <li>
             <img
-              src="image/img-4.jpg"
+              src="images/img-4.jpg"
               alt="Photo Daniel Wilson"
               width="264"
               height="260"
