--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -65,7 +65,7 @@
         <ul>
           <li>
             <img
-              src="images/img.jpg"
+              src="./images/img.jpg"
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
@@ -75,7 +75,7 @@
           </li>
           <li>
             <img
-              src="images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Photo Tom Ford"
               width="264"
               height="260"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="Photo Camila Garcia"
               width="264"
               height="260"
@@ -95,7 +95,7 @@
           </li>
           <li>
             <img
-              src="images/img-4.jpg"
+              src="./images/img-4.jpg"
               alt="Photo Daniel Wilson"
               width="264"
               height="260"
