--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -28,7 +35,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2>Content</h2>
+        <h2>Benefits</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -65,7 +72,7 @@
         <ul>
           <li>
             <img
-              src="./images/img.jpg"
+              src="./images/teams-photo/img.jpg"
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
@@ -75,7 +82,7 @@
           </li>
           <li>
             <img
-              src="./images/img-2.jpg"
+              src="./images/teams-photo/img-2.jpg"
               alt="Photo Tom Ford"
               width="264"
               height="260"
@@ -85,7 +92,7 @@
           </li>
           <li>
             <img
-              src="./images/img-3.jpg"
+              src="./images/teams-photo/img-3.jpg"
               alt="Photo Camila Garcia"
               width="264"
               height="260"
@@ -95,13 +102,80 @@
           </li>
           <li>
             <img
-              src="./images/img-4.jpg"
+              src="./images/teams-photo/img-4.jpg"
               alt="Photo Daniel Wilson"
               width="264"
               height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/img-1-2.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-2-2.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-3-2.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/img-4-2.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-5-2.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-6-2.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
