--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,62 +17,79 @@
     />
   </head>
   <body>
+    <!-- ============ HEADER ============-->
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="nav">
+        <a href="./index.html" class="logo"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
+        <ul class="menu">
+          <li class="menu-item"><a href="" class="menu-link">Studio</a></li>
+          <li class="menu-item"><a href="" class="menu-link">Portfolio</a></li>
+          <li class="menu-item"><a href="" class="menu-link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="address-list">
+          <li class="address-item">
+            <a href="mailto:info@devstudio.com" class="address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a href="tel:+110001111111" class="address-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
+    <!-- ============ /HEADER ============-->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- ============ HERO SECTION ============-->
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
+      <!-- ============ /HERO SECTION ============-->
+      <!-- ============ BENEFITS SECTION ============-->
       <section>
-        <h2>Benefits</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <h2 class="visually-hidden">Benefits</h2>
+        <ul class="benefits-menu">
+          <li class="benefits-item">
+            <h3 class="sub-title">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="sub-title">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="sub-title">Diligence</h3>
+            <p class="text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="sub-title">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
+      <!-- ============ /BENEFITS SECTION ============-->
+      <!-- ============ OUR TEAM SECTION ============-->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -77,8 +98,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="sub-title">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img
@@ -87,8 +108,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="sub-title">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -97,8 +118,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="sub-title">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -107,13 +128,15 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="sub-title">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
+      <!-- ============ /OUR TEAM SECTION ============-->
+      <!-- ============ OUR PORTFOLIO SECTION ============-->
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="section-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -122,7 +145,7 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
+            <h3 class="sub-title">Banking App</h3>
             <p>App</p>
           </li>
           <li>
@@ -132,7 +155,7 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
+            <h3 class="sub-title">Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -142,7 +165,7 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
+            <h3 class="sub-title">Meditation App</h3>
             <p>App</p>
           </li>
         </ul>
@@ -154,7 +177,7 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
+            <h3 class="sub-title">Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -164,7 +187,7 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
+            <h3 class="sub-title">Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
@@ -174,18 +197,23 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
+            <h3 class="sub-title">Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
       </section>
+      <!-- ============ /OUR PORTFOLIO SECTION ============-->
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <!-- ============ FOOTER SECTION ============-->
+    <footer class="footer-section">
+      <a href="./index.html" class="logo-footer"
+        ><span class="logo-accent">Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
+    <!-- ============ /FOOTER SECTION ============-->
   </body>
 </html>
