modify files styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     <header>
       <nav class="nav">
         <a href="./index.html" class="logo"
-          ><span class="logo-accent">Web</span>Studio</a
+          >Web<span class="logo-accent">Studio</span></a
         >
         <ul class="menu">
-          <li class="menu-item"><a href="" class="menu-link">Studio</a></li>
+          <li class="menu-item">
+            <a href="./index.html" class="menu-link">Studio</a>
+          </li>
           <li class="menu-item"><a href="" class="menu-link">Portfolio</a></li>
           <li class="menu-item"><a href="" class="menu-link">Contacts</a></li>
         </ul>
@@ -88,10 +90,10 @@
       </section>
       <!-- ============ /BENEFITS SECTION ============-->
       <!-- ============ OUR TEAM SECTION ============-->
-      <section>
+      <section class="team-section">
         <h2 class="section-title">Our Team</h2>
-        <ul>
-          <li>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               src="./images/teams-photo/img.jpg"
               alt="Photo Mark Guerrero"
@@ -101,7 +103,7 @@
             <h3 class="sub-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/teams-photo/img-2.jpg"
               alt="Photo Tom Ford"
@@ -111,7 +113,7 @@
             <h3 class="sub-title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/teams-photo/img-3.jpg"
               alt="Photo Camila Garcia"
@@ -121,7 +123,7 @@
             <h3 class="sub-title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/teams-photo/img-4.jpg"
               alt="Photo Daniel Wilson"
@@ -137,68 +139,66 @@
       <!-- ============ OUR PORTFOLIO SECTION ============-->
       <section>
         <h2 class="section-title">Our Portfolio</h2>
-        <ul>
-          <li>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-1-2.jpg"
-              alt=""
+              alt="Banking App Example"
               width="360"
               height="300"
             />
             <h3 class="sub-title">Banking App</h3>
-            <p>App</p>
+            <p class="text">App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-2-2.jpg"
-              alt=""
+              alt="Cashless Payment Example"
               width="360"
               height="300"
             />
             <h3 class="sub-title">Cashless Payment</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-3-2.jpg"
-              alt=""
+              alt="Meditation App Example"
               width="360"
               height="300"
             />
             <h3 class="sub-title">Meditation App</h3>
-            <p>App</p>
+            <p class="text">App</p>
           </li>
-        </ul>
-        <ul>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-4-2.jpg"
-              alt=""
+              alt="Taxi Service Example"
               width="360"
               height="300"
             />
             <h3 class="sub-title">Taxi Service</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-5-2.jpg"
-              alt=""
+              alt="Screen Illustrations Example"
               width="360"
               height="300"
             />
             <h3 class="sub-title">Screen Illustrations</h3>
-            <p>Design</p>
+            <p class="text">Design</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-6-2.jpg"
-              alt=""
+              alt="Online Courses Example"
               width="360"
               height="300"
             />
             <h3 class="sub-title">Online Courses</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
         </ul>
       </section>
@@ -207,7 +207,7 @@
     <!-- ============ FOOTER SECTION ============-->
     <footer class="footer-section">
       <a href="./index.html" class="logo-footer"
-        ><span class="logo-accent">Web</span>Studio</a
+        >Web<span class="logo-span-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
