--- a/index.html
+++ b/index.html
@@ -19,200 +19,214 @@
   <body>
     <!-- ============ HEADER ============-->
     <header>
-      <nav class="nav">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-accent">Studio</span></a
-        >
-        <ul class="menu">
-          <li class="menu-item">
-            <a href="./index.html" class="menu-link">Studio</a>
-          </li>
-          <li class="menu-item"><a href="" class="menu-link">Portfolio</a></li>
-          <li class="menu-item"><a href="" class="menu-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-list">
-          <li class="address-item">
-            <a href="mailto:info@devstudio.com" class="address-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a href="tel:+110001111111" class="address-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="nav">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-accent">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+110001111111" class="address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- ============ /HEADER ============-->
     <main>
       <!-- ============ HERO SECTION ============-->
       <section class="hero-section">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="container header">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
       <!-- ============ /HERO SECTION ============-->
       <!-- ============ BENEFITS SECTION ============-->
-      <section>
-        <h2 class="visually-hidden">Benefits</h2>
-        <ul class="benefits-menu">
-          <li class="benefits-item">
-            <h3 class="sub-title">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="sub-title">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="sub-title">Diligence</h3>
-            <p class="text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="sub-title">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="benefits-section">
+        <div class="container">
+          <h2 class="visually-hidden">Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="sub-title">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="sub-title">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="sub-title">Diligence</h3>
+              <p class="text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="sub-title">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- ============ /BENEFITS SECTION ============-->
       <!-- ============ OUR TEAM SECTION ============-->
       <section class="team-section">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/teams-photo/img.jpg"
-              alt="Photo Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-title">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/teams-photo/img-2.jpg"
-              alt="Photo Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-title">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/teams-photo/img-3.jpg"
-              alt="Photo Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-title">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/teams-photo/img-4.jpg"
-              alt="Photo Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-title">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/teams-photo/img.jpg"
+                alt="Photo Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="sub-title">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/teams-photo/img-2.jpg"
+                alt="Photo Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="sub-title">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/teams-photo/img-3.jpg"
+                alt="Photo Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="sub-title">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/teams-photo/img-4.jpg"
+                alt="Photo Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="sub-title">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- ============ /OUR TEAM SECTION ============-->
       <!-- ============ OUR PORTFOLIO SECTION ============-->
       <section>
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img-1-2.jpg"
-              alt="Banking App Example"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-title">Banking App</h3>
-            <p class="text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img-2-2.jpg"
-              alt="Cashless Payment Example"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-title">Cashless Payment</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img-3-2.jpg"
-              alt="Meditation App Example"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-title">Meditation App</h3>
-            <p class="text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img-4-2.jpg"
-              alt="Taxi Service Example"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-title">Taxi Service</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img-5-2.jpg"
-              alt="Screen Illustrations Example"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-title">Screen Illustrations</h3>
-            <p class="text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/portfolio/img-6-2.jpg"
-              alt="Online Courses Example"
-              width="360"
-              height="300"
-            />
-            <h3 class="sub-title">Online Courses</h3>
-            <p class="text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img-1-2.jpg"
+                alt="Banking App Example"
+                width="360"
+                height="300"
+              />
+              <h3 class="sub-title">Banking App</h3>
+              <p class="text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img-2-2.jpg"
+                alt="Cashless Payment Example"
+                width="360"
+                height="300"
+              />
+              <h3 class="sub-title">Cashless Payment</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img-3-2.jpg"
+                alt="Meditation App Example"
+                width="360"
+                height="300"
+              />
+              <h3 class="sub-title">Meditation App</h3>
+              <p class="text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img-4-2.jpg"
+                alt="Taxi Service Example"
+                width="360"
+                height="300"
+              />
+              <h3 class="sub-title">Taxi Service</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img-5-2.jpg"
+                alt="Screen Illustrations Example"
+                width="360"
+                height="300"
+              />
+              <h3 class="sub-title">Screen Illustrations</h3>
+              <p class="text">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolio/img-6-2.jpg"
+                alt="Online Courses Example"
+                width="360"
+                height="300"
+              />
+              <h3 class="sub-title">Online Courses</h3>
+              <p class="text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- ============ /OUR PORTFOLIO SECTION ============-->
     </main>
     <!-- ============ FOOTER SECTION ============-->
     <footer class="footer-section">
-      <a href="./index.html" class="logo-footer"
-        >Web<span class="logo-span-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a href="./index.html" class="logo-footer"
+          >Web<span class="logo-span-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
     <!-- ============ /FOOTER SECTION ============-->
   </body>
