--- a/index.html
+++ b/index.html
@@ -19,37 +19,35 @@
   <body>
     <!-- ============ HEADER ============-->
     <header class="header">
-      <div class="container">
-        <div class="header-container">
-          <nav class="header-nav">
-            <a href="./index.html" class="logo"
-              >Web<span class="logo-accent">Studio</span></a
-            >
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a href="./index.html" class="nav-link">Studio</a>
-              </li>
-              <li class="nav-item">
-                <a href="" class="nav-link">Portfolio</a>
-              </li>
-              <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
-            </ul>
-          </nav>
-          <address class="address">
-            <ul class="address-list">
-              <li class="address-item">
-                <a href="mailto:info@devstudio.com" class="address-link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="address-item">
-                <a href="tel:+110001111111" class="address-link"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-accent">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+110001111111" class="address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <!-- ============ /HEADER ============-->
@@ -240,16 +238,14 @@
     </main>
     <!-- ============ FOOTER SECTION ============-->
     <footer class="footer-section">
-      <div class="container">
-        <div class="footer-container">
-          <a href="./index.html" class="logo-footer"
-            >Web<span class="logo-span-footer">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+      <div class="footer-container container">
+        <a href="./index.html" class="logo-footer"
+          >Web<span class="logo-span-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
     <!-- ============ /FOOTER SECTION ============-->
