modify css and html files

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
       <!-- ============ HERO SECTION ============-->
       <section class="hero-section">
-        <div class="container header">
+        <div class="hero-container container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
         </div>
@@ -155,7 +155,7 @@
       </section>
       <!-- ============ /OUR TEAM SECTION ============-->
       <!-- ============ OUR PORTFOLIO SECTION ============-->
-      <section>
+      <section class="portfolio-section">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -238,7 +238,7 @@
     </main>
     <!-- ============ FOOTER SECTION ============-->
     <footer class="footer-section">
-      <div class="footer-container container">
+      <div class="container">
         <a href="./index.html" class="logo-footer"
           >Web<span class="logo-span-footer">Studio</span></a
         >
